<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <Button
        android:id="@+id/btnSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_sensor_mode"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_mode"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnHighScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_high_scores"/>

</LinearLayout>
